[package]
name = "minstack-echoipserver"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
clap-serde-derive = "0.2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yml = "0.0.5"
tokio = { version = "1.0", features = ["rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
